src/client/app/styles/main.css
/* BELOCAL STYLES 
-possible background colour: #EFF7EF;
-logo green: #78be25;

*/


.jcrop-keymgr {
  opacity: 0 !important;
}

.link a {
  color: #696969 !important;
}

.error{
  color: rgb(182, 99, 98);
  padding-left: 5px;
}

.underline-hover:hover {
  text-decoration: underline;
}

.profile-modal input.ng-invalid {
  background-color: rgb(255, 226, 226);
}

.profile-modal textarea.ng-invalid{
  background-color: rgb(255, 226, 226);
}

.fa-facebook-square {
  padding-right:5px;
}

#locationModal .has-error input{
  background-color: rgb(255, 226, 226);
}

#locationModal .has-error textarea{
  background-color: rgb(255, 226, 226);
}


#itemModal .has-error input{
  background-color: rgb(255, 226, 226);
}

#itemModal .has-error textarea{
  background-color: rgb(255, 226, 226);
}

.facebook-button{
  color: white;
  background: #4A65BB;
  background-image: -webkit-linear-gradient(top, #4A65BB, #3b54A3);
  background-image: -moz-linear-gradient(top, #4A65BB, #3b54A3);
  background-image: -ms-linear-gradient(top, #4A65BB, #3b54A3);
  background-image: -o-linear-gradient(top, #4A65BB, #3b54A3);
  background-image: linear-gradient(to bottom, #4A65BB, #3b54A3);
}

.facebook-button:hover{
  color: white;
  background: #5877D7;
  background-image: -webkit-linear-gradient(top, #5877D7, #4863b6);
  background-image: -moz-linear-gradient(top, #5877D7, #4863b6);
  background-image: -ms-linear-gradient(top, #5877D7, #4863b6);
  background-image: -o-linear-gradient(top, #5877D7, #4863b6);
  background-image: linear-gradient(to bottom, #5877D7, #4863b6);
  color: #FFFFFF !important;
}

.indent {
  margin-left: 10px !important;
}

@media screen and (max-width: 400px) {
    .hidden-mobile{
        display: none !important;
    }
}

@media screen and (min-width: 401px) {
    .show-mobile {
        display: none !important;
    }
}


.more-items{
  background-color: #f4f4f4; 
  background-size: cover; 
  background-repeat: no-repeat; 
  background-position: center; 
  border: 1px solid #DDDDDD;
}

@media (min-width: 940px) {
    .more-items {
        font-size: 10px !important
    }
}

.image-overlay{
  position:relative;
  max-width: 500px;
}

.vendor-avatar-img{
  width: 100%;
  max-width: 500px;
  height: 100%;
  min-height: 300px;
  overflow: hidden;
  vertical-align: middle;
  margin-bottom: 5px !important;
  background-color: #696969;

}

#profileOverlay{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50px;
  text-align: center;
  color: rgba(255,255,255,.85);
  background: rgba(0,0,0,.75);
  font-family: 'Roboto', sans-serif !important;
  font-weight: normal;
  color: #FFFFFF;
  font-size:24px;
  opacity:0;
  padding: 5px 0 0 0;
  -webkit-transition: opacity .20s ease;
  -moz-transition: opacity .20s ease;
  transition: opacity .20s ease;
}

#imageOverlay:hover #profileOverlay {
  opacity:1;
}

@media (max-width: 450px) {

  .vendor-avatar-img{
    height: 200px !important;
  }

  .vendor-avatar {
    height: 200px !important;
  }

  .like-button-position{
    margin-top: 150px !important;
  }

  #profileOverlay{
    font-size:18px;
  }
}

.like-padding {
  vertical-align: text-bottom;
}

.vendor-avatar {
  max-height: 350px;
  overflow: hidden;
  vertical-align: middle;
}

.update-profile-sm-buttons {
  float: right !important;
}


@media (max-width: 460px) {
  .seller-stock-formatting input[type="radio"] {
    margin-left: 5px !important;
    text-align: left !important;
  }
}

/*NAV BAR RESPONSIVENESS*/

@media (max-width: 1100px) and (min-width: 1001px) {
  .beLocal-search {
    width: 495px !important;
  }
}

@media (max-width: 768px) {
  .header-container {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center !important;
    float: none !important;
  }

  .search-nav-xs {
    width: 55% !important;
    float: left;
  }

  .navbar-toggle {
    margin-right: 5px;
    margin-left: 5px;
    margin-bottom: 0px !important;
  }
}

@media (max-width: 1000px) {
  .beLocal-search {
    width: 350px !important;
  }

  .logo-header {
    margin-top: -90px;
  }

  .logo-header img {
    width: 250px !important;
  }
}

/* END OF NAV BAR RESPONSIVENESS*/

.no-block {
  display: inline !important;
}

.search-nav-xs {
  width: 495px;
  margin-bottom: 0px !important;
}

.navbar-xs {
  height: auto !important;
  border-bottom: 3px solid #78be25 !important;
}

.navbar-brand {
  padding-top: 5px !important;
  padding-left: 5px !important;
  padding-bottom: 0px !important;
  padding-right: 5px;
}

.longDesciption {
  display: -webkit-box;
}

.navbar-brand img {
  height: 35px;
}

@media (max-width: 325px) {
    .full-logo {
        display: none !important;
    }
}

@media (min-width: 326px) {
    .small-logo {
        display: none !important;
    }
}

.beLocal-search {
  width: 600px;
}

.header-container {
  max-width: 1350px;
  margin-left: auto;
  margin-right: auto;
}

.hr-description-style {
  font-size: 16px;
  display: inline-block;
  font-family: 'Roboto', sans-serif;
  color: #9c9795;
  padding-top: 7px;
}

.customer-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1300px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 30px;
  padding-bottom: 35px;
}

.tag-formatting {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}

@media (max-width: 768px) {
  .customer-container {
    padding-top: 60px !important;
  }
}

.nav-shadow {
  text-shadow: 0px 0px 5px #CFF4BF;
}

.customer-nav .active {
  color: white !important;
/*  text-decoration: underline;
  -moz-text-decoration-color: #403E3B;
  text-decoration-color: #403E3B;*/
}

.customer-nav li a:hover {
  color: #252422 !important;
  text-decoration: none;
}

.customer-nav .active > a:hover {
  color: #1a1918 !important;
}
 
.customer-nav .active > a {
  color: #1a1918 !important;
}

.navbar {
  border-radius: 0px;
  background-color: #FFFFFF !important;
  height: 140px;
  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3) !important;
}
/* ... */

